--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -47,7 +47,7 @@
                             </div>
                             <div class="same-style-2 same-style-2-white same-style-2-hover-black same-style-2-font-inc header-cart">
                                 <a class="cart-active" href="/cartpage">
-                                  <i class="bi bi-cart"></i><span class="pro-count black">02</span>
+                                  <i class="bi bi-cart"></i><span class="pro-count black">03</span>
                                 </a>
                             </div>
                             <div class="same-style-2 same-style-2-white same-style-2-hover-black same-style-2-font-inc">
@@ -95,7 +95,7 @@
                                                     <li>
                                                         <a class="dropdown-title" href="#">Products Layout</a>
                                                         <ul>
-                                                            <li><a href="product-details.html">tab style 1</a></li>
+                                                            <li><a href="/product-page">tab style 1</a></li>
                                                             <li><a href="./product-page">tab style 2</a></li>
                                                             <li><a href="product-details-sticky.html">sticky style</a></li>
                                                             <li><a href="product-details-gallery.html">gallery style </a></li>
@@ -111,7 +111,7 @@
                                     <li><a href="#">Packaged food <i class="bi bi-chevron-down"></i> </a>
                                         <ul class="sub-menu-style">
                                             <li><a href="about-us.html">about us </a></li>
-                                            <li><a href="cart.html">cart page</a></li>
+                                            <li><a href="/cartpage">cart page</a></li>
                                             <li><a href="/checkout">checkout </a></li>
                                             <li><a href="/myaccount">my account</a></li>
                                             <li><a href="/wishlist">wishlist </a></li>
@@ -148,7 +148,7 @@
                                                 <li>
                                                     <a class="dropdown-title" href="#">Products Layout</a>
                                                     <ul>
-                                                        <li><a href="product-details.html">tab style 1</a></li>
+                                                        <li><a href="/product-page">tab style 1</a></li>
                                                         <li><a href="product-details-2.html">tab style 2</a></li>
                                                         <li><a href="product-details-sticky.html">sticky style</a></li>
                                                         <li><a href="product-details-gallery.html">gallery style </a></li>
