--- a/src/app/compare/compare.component.html
+++ b/src/app/compare/compare.component.html
@@ -22,100 +22,124 @@
                                 <tr>
                                     <td class="first-column">Product</td>
                                     <td class="product-image-title">
-                                        <a href="product-details.html" class="image">
+                                        <a href="/product-page" class="image">
                                             <img class="img-fluid" src="assets/images/product/product-13.jpg" alt="Compare Product">
                                         </a>
-                                        <a href="#" class="category">Short</a>
-                                        <a href="product-details.html" class="title">Basic Joggin Shorts</a>
+                                        <a href="#" class="category">Rice</a>
+                                        <a href="/product-page" class="title">Fortune Rozana Basmati Rice</a>
                                     </td>
                                     <td class="product-image-title">
-                                        <a href="product-details.html" class="image">
+                                        <a href="/product-page" class="image">
                                             <img class="img-fluid" src="assets/images/product/product-14.jpg" alt="Compare Product">
                                         </a>
-                                        <a href="#" class="category">Women </a>
-                                        <a href="product-details.html" class="title">Make Thing Happen T-Shirt</a>
+                                        <a href="#" class="category">Rice </a>
+                                        <a href="/product-page" class="title">INDIA GATE Basmati Rice</a>
                                     </td>
                                     <td class="product-image-title">
-                                        <a href="product-details.html" class="image">
+                                        <a href="/product-page" class="image">
                                             <img class="img-fluid" src="assets/images/product/product-15.jpg" alt="Compare Product">
                                         </a>
-                                        <a href="#" class="category">Shoe</a>
-                                        <a href="product-details.html" class="title">Basic White Simple Sneaker</a>
+                                        <a href="#" class="category">Rice</a>
+                                        <a href="/product-page" class="title">Daawat Biryani Basmati Rice</a>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td class="first-column">Description</td>
                                     <td class="pro-desc">
-                                        <p>Samsome Note Book Pro 5 is an the best Laptop on this budgeted. You can satisfied
-                                            after usign this laptop. </p>
+                                        <p> Fortune Rozana basmati rice is a fine variety of basmati that you can relish every day. It is specially aged to help every grain acquire the best basmati characteristics of fluffy and long grain.</p>
+                                        <p>On cooking, the grains do not stick together and become flavorsome. The result is an irresistible serving the delights everyone's heart through its appearance and taste</p>
                                     </td>
                                     <td class="pro-desc">
-                                        <p>Samsome Note Book Pro 5 is an the best Laptop on this budgeted. You can satisfied
-                                            after usign this laptop. </p>
+                                        <p>India Gate Classic Basmati Rice is an exotic new class of Basmati which is aged for 2 years. India Gate Classic Basmati Rice has a delectable taste that lets you relish special moments in life. Apart from the delicious taste, it is defined by its delicate aroma and smooth pearl white grains that are extra fine and long - all attributes of a true Basmati. </p>
                                     </td>
                                     <td class="pro-desc">
-                                        <p>Samsome Note Book Pro 5 is an the best Laptop on this budgeted. You can satisfied
-                                            after usign this laptop. </p>
+                                        <p>The Signature of Authentic Biryani is the length of the rice grain. Daawat Biryani is the Worlds Longest grains which gives Finest presentation to the Biryani. </p>
+                                        <p>Every Single grain of Daawat Biryani Basmati rice elongates to 18-24mm when cooked.</p>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td class="first-column">Price</td>
-                                    <td class="pro-price">$295</td>
-                                    <td class="pro-price">$275</td>
-                                    <td class="pro-price">$395</td>
+                                    <td class="pro-price">₹329</td>
+                                    <td class="pro-price">₹316</td>
+                                    <td class="pro-price">₹169</td>
                                 </tr>
                                 <tr>
-                                    <td class="first-column">Color</td>
-                                    <td class="pro-color">Black</td>
-                                    <td class="pro-color">Red</td>
-                                    <td class="pro-color">Blue</td>
+                                    <td class="first-column">Model Name</td>
+                                    <td class="pro-price">Rozana</td>
+                                    <td class="pro-price">Regular Choice</td>
+                                    <td class="pro-price">Biryani</td>
+                                </tr>
+                                <tr>
+                                    <td class="first-column">Rice Type</td>
+                                    <td class="pro-price">Basmathi Rice</td>
+                                    <td class="pro-price">Basmathi Rice</td>
+                                    <td class="pro-price">Basmathi Rice</td>
+                                </tr>
+                                <tr>
+                                    <td class="first-column">Quantity</td>
+                                    <td class="pro-price">5 kg</td>
+                                    <td class="pro-price">5 kg</td>
+                                    <td class="pro-price">1 Kg</td>
+                                </tr>
+                                
+                                <tr>
+                                    <td class="first-column">Container Type</td>
+                                    <td class="pro-price">Bag</td>
+                                    <td class="pro-price">Vacuum Pack</td>
+                                    <td class="pro-price">Pouch</td>
+                                </tr>
+                                <tr>
+                                    <td class="first-column">Colour</td>
+                                    <td class="pro-color">White</td>
+                                    <td class="pro-color">White</td>
+                                    <td class="pro-color">White</td>
                                 </tr>
                                 <tr>
                                     <td class="first-column">Stock</td>
                                     <td class="pro-stock">In Stock</td>
-                                    <td class="pro-stock">Stock Out</td>
+                                    <td class="pro-stock">In Stock</td>
                                     <td class="pro-stock">In Stock</td>
                                 </tr>
                                 <tr>
                                     <td class="first-column">Add to cart</td>
-                                    <td><a href="cart.html" class="check-btn">Add to Cart</a></td>
-                                    <td><a href="cart.html" class="check-btn disabled">Add to Cart</a></td>
-                                    <td><a href="cart.html" class="check-btn">Add to Cart</a></td>
+                                    <td><a href="/cartpage" class="check-btn">Add to Cart</a></td>
+                                    <td><a href="/cartpage" class="check-btn disabled">Add to Cart</a></td>
+                                    <td><a href="/cartpage" class="check-btn">Add to Cart</a></td>
                                 </tr>
                                 <tr>
                                     <td class="first-column">Rating</td>
                                     <td class="pro-ratting">
-                                        <i class="icon_star"></i>
-                                        <i class="icon_star"></i>
-                                        <i class="icon_star"></i>
-                                        <i class="icon_star"></i>
-                                        <i class="icon_star"></i>
+                                        <i class="bi bi-star-fill yellow"></i>
+                                        <i class="bi bi-star-fill yellow"></i>
+                                        <i class="bi bi-star-fill yellow"></i>
+                                        <i class="bi bi-star-fill yellow"></i>
+                                        <i class="bi bi-star-half yellow"></i>
                                     </td>
                                     <td class="pro-ratting">
-                                        <i class="icon_star"></i>
-                                        <i class="icon_star"></i>
-                                        <i class="icon_star"></i>
-                                        <i class="icon_star"></i>
-                                        <i class="icon_star"></i>
+                                            <i class="bi bi-star-fill yellow"></i>
+                                            <i class="bi bi-star-fill yellow"></i>
+                                            <i class="bi bi-star-fill yellow"></i>
+                                            <i class="bi bi-star-fill yellow"></i>
+                                            <i class="bi bi-star-fill yellow"></i>
                                     </td>
                                     <td class="pro-ratting">
-                                        <i class="icon_star"></i>
-                                        <i class="icon_star"></i>
-                                        <i class="icon_star"></i>
-                                        <i class="icon_star"></i>
-                                        <i class="icon_star"></i>
+                                            <i class="bi bi-star-fill yellow"></i>
+                                            <i class="bi bi-star-fill yellow"></i>
+                                            <i class="bi bi-star-fill yellow"></i>
+                                            <i class="bi bi-star-fill yellow"></i>
+                                            <i class="bi bi-star-half yellow"></i>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td class="first-column">Remove</td>
                                     <td class="pro-remove">
-                                        <button><i class="icon-trash"></i></button>
+                                        <button><i class="bi bi-trash"></i></button>
                                     </td>
                                     <td class="pro-remove">
-                                        <button><i class="icon-trash"></i></button>
+                                        <button><i class="bi bi-trash"></i></button>
                                     </td>
                                     <td class="pro-remove">
-                                        <button><i class="icon-trash"></i></button>
+                                        <button><i class="bi bi-trash"></i></button>
                                     </td>
                                 </tr>
                             </tbody>
