--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -10,7 +10,7 @@
                           <h1 class="animated">Kitchen & Snack Essential</h1>
                           <p class="animated">Buy 1 get 1 free</p>
                           <div class="btn-style-1">
-                              <a class="animated btn-1-padding-4 btn-1-orange btn-1-font-14" href="product-details.html">Explore Now</a>
+                              <a class="animated btn-1-padding-4 btn-1-orange btn-1-font-14" href="/product-page">Explore Now</a>
                           </div>
                       </div>
                   </div>
@@ -29,7 +29,7 @@
                           <h1 class="animated">Get <br>Rs.225 off</h1>
                           <p class="animated">3 month pass <br> just Rs.1</p>
                           <div class="btn-style-1">
-                              <a class="animated btn-1-padding-4 btn-1-orange btn-1-font-14" href="product-details.html">Explore Now</a>
+                              <a class="animated btn-1-padding-4 btn-1-orange btn-1-font-14" href="/product-page">Explore Now</a>
                           </div>
                       </div>
                   </div>
