--- a/src/app/product-page/product-page.component.html
+++ b/src/app/product-page/product-page.component.html
@@ -309,7 +309,7 @@
             <div class="product-plr-1">
                 <div class="single-product-wrap">
                     <div class="product-img product-img-zoom mb-15">
-                        <a href="product-details.html">
+                        <a href="/product-page">
                             <img src="assets/img/rice/rice-1.jpeg" alt="">
                         </a>
                         <div class="product-action-2 tooltip-style-2">
@@ -329,7 +329,7 @@
                             </div>
                             <span>(2)</span>
                         </div>
-                        <h3><a href="product-details.html">Basic Joggin Shorts</a></h3>
+                        <h3><a href="/product-page">Basic Joggin Shorts</a></h3>
                         <div class="product-price-2">
                             <span>$20.50</span>
                         </div>
@@ -345,7 +345,7 @@
                             </div>
                             <span>(2)</span>
                         </div>
-                        <h3><a href="product-details.html">Basic Joggin Shorts</a></h3>
+                        <h3><a href="/product-page">Basic Joggin Shorts</a></h3>
                         <div class="product-price-2">
                             <span>$20.50</span>
                         </div>
@@ -360,7 +360,7 @@
             <div class="product-plr-1">
                 <div class="single-product-wrap">
                     <div class="product-img product-img-zoom mb-15">
-                        <a href="product-details.html">
+                        <a href="/product-page">
                             <img src="assets/img/rice/rice-2.jpeg" alt="">
                         </a>
                         <span class="pro-badge left bg-red">-20%</span>
@@ -381,7 +381,7 @@
                             </div>
                             <span>(2)</span>
                         </div>
-                        <h3><a href="product-details.html">Make Thing Happen T-Shirt</a></h3>
+                        <h3><a href="/product-page">Make Thing Happen T-Shirt</a></h3>
                         <div class="product-price-2">
                             <span class="new-price">$35.45</span>
                             <span class="old-price">$45.80</span>
@@ -398,7 +398,7 @@
                             </div>
                             <span>(2)</span>
                         </div>
-                        <h3><a href="product-details.html">Make Thing Happen T-Shirt</a></h3>
+                        <h3><a href="/product-page">Make Thing Happen T-Shirt</a></h3>
                         <div class="product-price-2">
                             <span class="new-price">$35.45</span>
                             <span class="old-price">$45.80</span>
@@ -414,7 +414,7 @@
             <div class="product-plr-1">
                 <div class="single-product-wrap">
                     <div class="product-img product-img-zoom mb-15">
-                        <a href="product-details.html">
+                        <a href="/product-page">
                             <img src="assets/img/rice/rice-3.jpeg" alt="">
                         </a>
                         <div class="product-action-2 tooltip-style-2">
@@ -434,7 +434,7 @@
                             </div>
                             <span>(2)</span>
                         </div>
-                        <h3><a href="product-details.html">Basic White Simple Sneaker</a></h3>
+                        <h3><a href="/product-page">Basic White Simple Sneaker</a></h3>
                         <div class="product-price-2">
                             <span>$35.45</span>
                         </div>
@@ -450,7 +450,7 @@
                             </div>
                             <span>(2)</span>
                         </div>
-                        <h3><a href="product-details.html">Basic White Simple Sneaker</a></h3>
+                        <h3><a href="/product-page">Basic White Simple Sneaker</a></h3>
                         <div class="product-price-2">
                             <span>$35.45</span>
                         </div>
