--- a/src/app/wishlist/wishlist.component.html
+++ b/src/app/wishlist/wishlist.component.html
@@ -183,11 +183,11 @@
                             </div>
                             <div class="pro-details-action-wrap">
                                 <div class="pro-details-add-to-cart">
-                                    <a title="Add to Cart" href="#">Add To Cart </a>
+                                    <a title="Add to bag" href="/cartpage">Add To bag </a>
                                 </div>
                                 <div class="pro-details-action">
-                                    <a title="Add to Wishlist" href="#"><i class="icon-heart"></i></a>
-                                    <a title="Add to Compare" href="#"><i class="icon-refresh"></i></a>
+                                    <a title="Add to Wishlist" href="/wishlist"><i class="icon-heart"></i></a>
+                                    <a title="Add to Compare" href="/compare"><i class="icon-refresh"></i></a>
                                     <a class="social" title="Social" href="#"><i class="icon-share"></i></a>
                                     <div class="product-dec-social">
                                         <a class="facebook" title="Facebook" href="#"><i class="icon-social-facebook"></i></a>
