--- a/src/app/cartpage/cartpage.component.html
+++ b/src/app/cartpage/cartpage.component.html
@@ -33,14 +33,14 @@
                                     <td class="product-thumbnail">
                                         <a href="#"><img src="assets/images/cart/cart-1.jpg" alt=""></a>
                                     </td>
-                                    <td class="product-name"><a href="#">Simple Black T-Shirt</a></td>
-                                    <td class="product-price-cart"><span class="amount">$260.00</span></td>
+                                    <td class="product-name"><a href="#">Fortune Rozana Basmati Rice</a></td>
+                                    <td class="product-price-cart"><span class="amount">&#8377;329.00</span></td>
                                     <td class="product-quantity pro-details-quality">
                                         <div class="cart-plus-minus">
                                             <input class="cart-plus-minus-box" type="text" name="qtybutton" value="1">
                                         </div>
                                     </td>
-                                    <td class="product-subtotal">$110.00</td>
+                                    <td class="product-subtotal">&#8377;329.00</td>
                                     <td class="product-remove">
                                         <a href="#"><i class="bi bi-x"></i></a>
                                     </td>
@@ -49,14 +49,14 @@
                                     <td class="product-thumbnail">
                                         <a href="#"><img src="assets/images/cart/cart-2.jpg" alt=""></a>
                                     </td>
-                                    <td class="product-name"><a href="#">Norda Simple Backpack</a></td>
-                                    <td class="product-price-cart"><span class="amount">$150.00</span></td>
+                                    <td class="product-name"><a href="#">INDIA GATE Basmati Rice</a></td>
+                                    <td class="product-price-cart"><span class="amount">&#8377;316.00</span></td>
                                     <td class="product-quantity pro-details-quality">
                                         <div class="cart-plus-minus">
                                             <input class="cart-plus-minus-box" type="text" name="qtybutton" value="1">
                                         </div>
                                     </td>
-                                    <td class="product-subtotal">$150.00</td>
+                                    <td class="product-subtotal">&#8377;316.00</td>
                                     <td class="product-remove">
                                         <a href="#"><i class="bi bi-x"></i></a>
                                     </td>
@@ -65,14 +65,14 @@
                                     <td class="product-thumbnail">
                                         <a href="#"><img src="assets/images/cart/cart-1.jpg" alt=""></a>
                                     </td>
-                                    <td class="product-name"><a href="#">Simple Black T-Shirt </a></td>
-                                    <td class="product-price-cart"><span class="amount">$170.00</span></td>
+                                    <td class="product-name"><a href="#">Daawat Biryani Basmati Rice </a></td>
+                                    <td class="product-price-cart"><span class="amount">&#8377;169.00</span></td>
                                     <td class="product-quantity pro-details-quality">
                                         <div class="cart-plus-minus">
                                             <input class="cart-plus-minus-box" type="text" name="qtybutton" value="2">
                                         </div>
                                     </td>
-                                    <td class="product-subtotal">$170.00</td>
+                                    <td class="product-subtotal">&#8377;169.00</td>
                                     <td class="product-remove">
                                         <a href="#"><i class="bi bi-x"></i></a>
                                     </td>
@@ -84,7 +84,7 @@
                         <div class="col-lg-12">
                             <div class="cart-shiping-update-wrapper">
                                 <div class="cart-shiping-update">
-                                    <a href="#">Continue Shopping</a>
+                                    <a href="/homepage">Continue Shopping</a>
                                 </div>
                                 <div class="cart-clear">
                                     <button>Update Cart</button>
@@ -159,16 +159,16 @@
                             <div class="title-wrap">
                                 <h4 class="cart-bottom-title section-bg-gary-cart">Cart Total</h4>
                             </div>
-                            <h5>Total products <span>$260.00</span></h5>
+                            <h5>Total products <span>&#8377;814.00</span></h5>
                             <div class="total-shipping">
                                 <h5>Total shipping</h5>
                                 <ul>
-                                    <li><input type="checkbox"> Standard <span>$20.00</span></li>
-                                    <li><input type="checkbox"> Express <span>$30.00</span></li>
+                                    <li><input type="checkbox"> Standard <span>&#8377;10.00</span></li>
+                                    <li><input type="checkbox"> Express <span>&#8377;30.00</span></li>
                                 </ul>
                             </div>
-                            <h4 class="grand-totall-title">Grand Total <span>$260.00</span></h4>
-                            <a href="#">Proceed to Checkout</a>
+                            <h4 class="grand-totall-title">Grand Total <span>&#8377;814.00</span></h4>
+                            <a href="/checkout">Proceed to Checkout</a>
                         </div>
                     </div>
                 </div>
